[BTWCT-2610] Fixed spacing on fields

--- a/waters-aem-frontend/src/styles/detail-tiles.scss
+++ b/waters-aem-frontend/src/styles/detail-tiles.scss
@@ -207,7 +207,12 @@
 
                 .cmp-form-field {
                     float: none;
-                    margin-bottom: $space-l;
+                    @include tablet-and-over {
+                        width: 62.5%;
+                        @include tablet {
+                            width: 50%;
+                        }
+                    }
                 }
 
                 .cmp-button {
