--- a/waters-aem-frontend/src/styles/forms.scss
+++ b/waters-aem-frontend/src/styles/forms.scss
@@ -521,17 +521,3 @@
         margin-bottom: 0px;
     }
 }
-
-.password, 
-.personal,
-.billing,
-.shipping {
-    .cmp-form-field {          
-        @include tablet-and-over {
-            width: 62.5%;
-            @include tablet {
-                width: 50%;
-            }
-        }         
-    }
-}
